--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -27,20 +27,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/user/Рабочий стол/DEV/Боты/telegram imvo shop/scripts/settings_scripts.py:9: YAMLLoadWarning: calling yaml.load() without Loader=... is deprecated, as the default Loader is unsafe. Please read https://msg.pyyaml.org/load for full details.\n",
-      "  self.config = load(f)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Работа с датами\n",
-    "from datetime import datetime, timedelta \n",
-    "import time\n",
+    "\n",
     "# Базовое и загрузка конфигурации\n",
     "import os\n",
     "import json\n",
@@ -50,23 +39,12 @@
     "import telegram\n",
     "# Все статические настройки прячем сюда\n",
     "from scripts.settings_scripts import Settings\n",
-    "s = Settings()\n",
+    "\n",
     "#Внутрянка\n",
     "from scripts.admins import Imvo_shop_admin\n",
+    "from scripts.users import Imvo_shop_users\n",
     "from scripts.get_updates import LastMessage # Ищет новых юзеров\n",
-    "# Работа бота\n",
-    "bot = telegram.Bot(s.token)\n",
-    "users = s.users\n",
-    "admins = s.admins\n",
-    "goods = s.goods"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
     "\"\"\"\n",
     "Корневой механизм программы\n",
     "- проверяем обновления\n",
@@ -75,28 +53,147 @@
     "- генерим ответ\n",
     "\"\"\"\n",
     "\n",
-    "lm = LastMessage (bot)\n",
-    "data = lm.data\n",
+    "class SHOP_bot:\n",
+    "    def __init__ (self):\n",
+    "        self.reaction = False\n",
+    "        s = Settings()\n",
+    "        # Работа бота\n",
+    "        bot = telegram.Bot(s.token)\n",
+    "        users = s.users\n",
+    "        admins = s.admins        \n",
     "\n",
-    "identify_user = list(data.keys())[0]\n",
-    "if identify_user not in users.keys():\n",
-    "    print ('new')\n",
-    "    users.update(data)\n",
-    "    with open(os.path.join('files', 'users.json'), 'w', encoding='utf-8') as f:\n",
-    "        json.dump(users, f, ensure_ascii=False, indent=4) \n",
-    "    bot.sendMessage(chat_id = identify_user, text = 'Добавлен новый пользователь')\n",
-    "        \n",
-    "if identify_user in admins\\\n",
-    "and data[identify_user][-2] > users[identify_user][-2]:    \n",
-    "    print ('Все условия для взаимодействия с администратором выполнены')\n",
-    "    context = data[identify_user][-1]\n",
+    "        lm = LastMessage (bot)\n",
+    "        data = lm.data\n",
+    "        goods = None\n",
+    "\n",
+    "\n",
+    "        identify_user = list(data.keys())[0]\n",
+    "        if identify_user not in users.keys():\n",
+    "            self.reaction = True\n",
+    "            print ('new')\n",
+    "            users.update(data)\n",
+    "            with open(os.path.join('files', 'users.json'), 'w', encoding='utf-8') as f:\n",
+    "                json.dump(users, f, ensure_ascii=False, indent=4) \n",
+    "            bot.sendMessage(chat_id = identify_user, text = 'Добавлен новый пользователь')\n",
+    "\n",
+    "        if identify_user in admins\\\n",
+    "        and data[identify_user][-2] > users[identify_user][-2]:    \n",
+    "            self.reaction = True\n",
+    "            print ('Все условия для взаимодействия с администратором выполнены')\n",
+    "            context = data[identify_user][-1]\n",
+    "\n",
+    "            #Если условия админа соблюдены - запускаем админский сервис\n",
+    "            imvo_shop_admin = Imvo_shop_admin (context)\n",
+    "            users.update(data)\n",
+    "            with open(os.path.join('files', 'users.json'), 'w', encoding='utf-8') as f:\n",
+    "                json.dump(users, f, ensure_ascii=False, indent=4) \n",
+    "            bot.sendMessage(chat_id = identify_user, text = imvo_shop_admin.result) \n",
+    "            \n",
+    "\n",
+    "        if identify_user not in admins\\\n",
+    "        and data[identify_user][-2] > users[identify_user][-2]:\n",
+    "            self.reaction = True\n",
+    "            print ('Все условия взаимодействия с пользователем выполнены')\n",
+    "            context = data[identify_user][-1]\n",
+    "\n",
+    "            #Если условия админа соблюдены - запускаем клиентский сервис\n",
+    "            imvo_shop_users = Imvo_shop_users (context)\n",
+    "            users.update(data)\n",
+    "            with open(os.path.join('files', 'users.json'), 'w', encoding='utf-8') as f:\n",
+    "                json.dump(users, f, ensure_ascii=False, indent=4) \n",
+    "            if imvo_shop_users.result != None:\n",
+    "                user_res = imvo_shop_users.result\n",
+    "                bot.sendMessage(chat_id = identify_user, text = user_res )\n",
+    "            if imvo_shop_users.lot != None:\n",
+    "\n",
+    "                for useradmin in admins:\n",
+    "                    bot.sendMessage(chat_id = useradmin, text = imvo_shop_users.lot )\n",
+    "                    if data[identify_user][1] != None\\\n",
+    "                    or data[identify_user][2] != None:\n",
+    "                        name = '@'+data[identify_user][1] + ' ' + \\\n",
+    "                        data[identify_user][2]\n",
+    "                        second_message = 'Отправлено через бот. Данные пользователя - {}'\\\n",
+    "                        .format(name)\n",
+    "                        bot.sendMessage(chat_id = useradmin, text = second_message )  \n",
+    "                    else:\n",
+    "                        second_message =\\\n",
+    "                        'Отправлено через закрытую группу. Логин видно в чате'\n",
+    "                        bot.sendMessage(chat_id = useradmin, text = second_message )  \n",
+    "                        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---\n",
+      "IMVO SHOP BOT. MVP VERSION 1\n",
+      "---\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/user/Рабочий стол/DEV/Боты/telegram imvo shop/scripts/settings_scripts.py:9: YAMLLoadWarning: calling yaml.load() without Loader=... is deprecated, as the default Loader is unsafe. Please read https://msg.pyyaml.org/load for full details.\n",
+      "  self.config = load(f)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Все условия взаимодействия с пользователем выполнены\n",
+      "Запрос на товар\n",
+      "Оформлен заказ №345345 Товар - ываываывып Стоимость - 234234. Менеджер с вами свяжется\n",
+      "Все условия взаимодействия с пользователем выполнены\n",
+      "Запрос на товар\n",
+      "Оформлен заказ №345345 Товар - ываываывып Стоимость - 234234. Менеджер с вами свяжется\n",
+      "Все условия взаимодействия с пользователем выполнены\n",
+      "Запрос на товар\n",
+      "Оформлен заказ №345345 Товар - ываываывып Стоимость - 234234. Менеджер с вами свяжется\n",
+      "Все условия взаимодействия с пользователем выполнены\n",
+      "Запрос на товар\n",
+      "Товар с заданным номером не найден, или его запасы распроданы\n",
+      "Все условия для взаимодействия с администратором выполнены\n",
+      "Все условия для взаимодействия с администратором выполнены\n",
+      "Все условия взаимодействия с пользователем выполнены\n",
+      "Запрос на товар\n",
+      "Оформлен заказ №555 Товар - Товар дня Стоимость - 3434 рублей. Менеджер с вами свяжется\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Работа с датами\n",
+    "from datetime import datetime, timedelta \n",
+    "import time\n",
+    "from \n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
     "    \n",
-    "    #Если условия админа соблюдены - запускаем админский сервис\n",
-    "    imvo_shop_admin = Imvo_shop_admin (context)\n",
-    "    users.update(data)\n",
-    "    with open(os.path.join('files', 'users.json'), 'w', encoding='utf-8') as f:\n",
-    "        json.dump(users, f, ensure_ascii=False, indent=4) \n",
-    "    bot.sendMessage(chat_id = identify_user, text = imvo_shop_admin.result) "
+    "    timer = 1\n",
+    "    print ('---')\n",
+    "    print ('IMVO SHOP BOT. MVP VERSION 1')\n",
+    "    print ('---')\n",
+    "\n",
+    "    while True:\n",
+    "        \n",
+    "        try:       \n",
+    "            sh = SHOP_bot()\n",
+    "            if sh.reaction == True:\n",
+    "                timer = 1           \n",
+    "        except:\n",
+    "            print ('Масштабная ошибка в блоке бота')\n",
+    "            \n",
+    "        if timer < 4:\n",
+    "            timer += 0.5\n",
+    "            \n",
+    "        time.sleep(timer)\n"
    ]
   },
   {
